Fixed anyterm layout jumping

--- a/web/console/exec/anyterm.css
+++ b/web/console/exec/anyterm.css
@@ -142,5 +142,7 @@ img#Close {
 
   overflow: auto;
   overflow-x: visible;
+  min-height: 500px;
+  max-height: 500px;
 }
 
